@@ -5,3 +5,4 @@ Changelog
 2, patch the missing part that use to filter file type
 3, create a part for debug usage (that marked as #d, this part will be the basement of Third Alpha Build)
 4, Finished debug Second Alpha Build
+5, Decide to independ Playlists mode, it will be the sub-mode of Playlist mode
